--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -61,3 +61,23 @@ body {
   background: image_url('funky-lines.png');
   font-family: Corbel, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", "Bitstream Vera Sans", "Liberation Sans", Verdana, "Verdana Ref", sans-serif;
 }
+
+.booyah-box {
+  -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  box-shadow: 3px 3px 2px 0 #d0d0d0;
+  background: #fff;
+  border: 1px solid #de6464;
+  padding: 10px;
+  margin-top: 3px;
+}
+
+.booyah-box h2, .booyah-box h1 {
+  margin: 10px;
+  text-align: center;
+  color: #de6464;
+}
+
+#navbarNav {
+  justify-content: flex-end;
+}
