--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,17 +13,13 @@
 <body>
   <div id="flex-content-container">
     <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
       <%= link_to 'Flixter', root_path, class: 'navbar-brand' %>
+      <ul class="navbar-nav col-4">
+        <%= link_to 'See All Courses', courses_path, class: 'nav-link' %>
+      </ul>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <% if user_signed_in? %>
-          <li class="nav-item">
-            <%= link_to 'My Account', '#', class: 'nav-link' %>
-          </li>
           <li class="nav-item">
             <%= link_to 'Sign-Out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
           </li>
